@@ -3143,12 +3143,23 @@ BEGIN
 	UErrorCode err1 = U_ZERO_ERROR;
 	if (!U_SUCCESS(err1))
 	BEGIN
-		printf("3there is a error: U_ZERO_ERROR");
+		printf("Error in icu_strToUpper?\n");
 	END
-	tulen=u_strToUpper(tarup,tucap, target,tarlen,NULL,&err1);
+	if (Flag_language)
+	{
+		tulen=u_strToUpper(tarup,tucap, target,tarlen,Str_language,&err1);
+	}
+	else
+	{
+		tulen=u_strToUpper(tarup,tucap, target,tarlen,NULL,&err1);
+	}
 	if (!U_SUCCESS(err1))
 	BEGIN
-		printf("4there is a error: U_ZERO_ERROR");
+		printf("Error in icu_strToUpper.\n");
+#ifdef TRACE
+		if (Flag_trace)
+			TRACE_PR_LN ("Error in icu_strToUpper");
+#endif                      			/* TRACE */
 	END
 
 	return tulen;
